PDFBOX-5669: use JDK 11 built-in methods, as suggested by Axel Howind
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1912053 13f79535-47bb-0310-9956-ffa450edef68