@@ -264,7 +264,7 @@ public class StreamPane implements ActionListener
                 JOptionPane.showMessageDialog(panel, command + " text not available (filter missing?)");
                 return;
             }
-            hexView.changeData(IOUtils.toByteArray(is));
+            hexView.changeData(is.readAllBytes());
         }
     }
 
@@ -407,7 +407,7 @@ public class StreamPane implements ActionListener
             PDFStreamParser parser;
             try
             {
-                parser = new PDFStreamParser(IOUtils.toByteArray(inputStream));
+                parser = new PDFStreamParser(inputStream.readAllBytes());
                 parser.parse().forEach(obj -> writeToken(obj, docu));
             }
             catch (IOException e)
