@@ -31,7 +31,6 @@ import java.util.Random;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.apache.pdfbox.io.IOUtils;
 import org.bouncycastle.asn1.ASN1ObjectIdentifier;
 import org.bouncycastle.operator.DefaultDigestAlgorithmIdentifierFinder;
 import org.bouncycastle.operator.DigestAlgorithmIdentifierFinder;
@@ -170,7 +169,7 @@ public class TSAClient
         byte[] response;
         try (InputStream input = connection.getInputStream())
         {
-            response = IOUtils.toByteArray(input);
+            response = input.readAllBytes();
         }
         catch (IOException ex)
         {
