@@ -402,7 +402,7 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
         if (stream != null)
         {
             InputStream is = stream.createInputStream();
-            byte[] mapAsBytes = IOUtils.toByteArray(is);
+            byte[] mapAsBytes = is.readAllBytes();
             IOUtils.closeQuietly(is);
             int numberOfInts = mapAsBytes.length / 2;
             cid2gid = new int[numberOfInts];
